# tap

./: .env.example  .gitignore  README.md  package.json
base-rn/: package.json  tsconfig.json
base-rn/src/: index.ts
base-rn/src/theme/: ThemeProvider.tsx  createStyleSheet.ts  darkTheme.ts  index.ts  lightTheme.ts  types.ts  useTheme.ts
base-rn/src/tokens/: animation.ts  colors.ts  glass.ts  index.ts  shadows.ts  spacing.ts  typography.ts
companion/: app.json  metro.config.js  package.json  tsconfig.json
companion/app/: _layout.tsx  keys.tsx  servers.tsx
companion/src/: App.tsx
companion/src/hooks/: useApi.ts  useAuth.ts
companion/src/navigation/: TabNavigator.tsx
macos/TapMac/: ContentView.swift  TapMac.entitlements  TapMacApp.swift  Theme.swift
macos/TapMac.xcodeproj/: project.pbxproj
relay/: Cargo.toml  Dockerfile  relay.example.toml
relay/src/: main.rs
relay/src/auth/: middleware.rs  mod.rs
relay/src/config/: mod.rs
relay/src/db/: mod.rs  models.rs
relay/src/routes/: auth_routes.rs  commands.rs  config_route.rs  exec.rs  health.rs  history.rs  keys.rs  mod.rs  overview.rs  servers.rs  setup.rs  templates.rs  ws.rs
relay/src/ssh/: import.rs  mod.rs  pool.rs
relay/src/templates/: mod.rs
watch/Tap Watch App/: ContentView.swift  Tap Watch App.entitlements  TapApp.swift
watch/Tap.xcodeproj/: project.pbxproj
watch/TapWidgets/: DockerWidget.swift  FleetMetricsWidget.swift  QuickCommandWidget.swift  ServerAppEntity.swift  ServerStatusWidget.swift  TapWidgets.entitlements  TapWidgets.swift  UptimeWidget.swift
(+64 files in other folders)
