[package]
name = "tap-relay"
version = "0.1.0"
edition = "2021"
description = "SSH command relay for the Tap ecosystem"
license = "MIT"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# SSH
russh = "0.45"
russh-keys = "0.45"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Auth & Crypto
argon2 = "0.5"
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.22"

# TLS
rustls = "0.23"
tokio-rustls = "0.26"

# TOTP
totp-rs = { version = "5", features = ["gen_secret"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
anyhow = "1"
once_cell = "1"
dirs = "5"
async-trait = "0.1"
